# mcp-visualization-duckdb

./: .env.example  .gitattributes  .gitignore  CONFIGURE_DEMO.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  PACKAGE_README.md  PUBLISH_GUIDE.md  README.md  WINDOWS_SETUP.md  build_sample_db.py  create_project_structure.sh  create_sample_data.py  debug_connection.py  mcp_server.py  publish.bat  pyproject.toml  requirements.txt  setup_publish.py  test_dashboard.py  test_db_load.py  test_local.bat  test_local.sh  test_package.py  test_publish.py  verify_package.py
.claude/: settings.local.json
code/: main.py
code/config/: config.yaml  settings.py
code/llm/: ollama_client.py  simple_fallback.py
code/mcp_server/: handlers.py  server.py  tools.py  types.py
code/visualization/: insights.py
data/: mcp.duckdb
data/samples/: customers.csv  products.csv  sales_data.csv
mcp_visualization/: __init__.py  claude_config.py  cli.py  database.py  install_helper.py  main.py  server.py
mcp_visualization/config/: config.yaml  settings.py
mcp_visualization/data/: __init__.py  customer_data.csv  monthly_revenue.csv  product_categories.csv  sales_data.csv
mcp_visualization/database/: __init__.py  interface.py  manager.py  queries.py  sample_data.py
mcp_visualization/databricks/: __init__.py  credentials.py  manager.py
mcp_visualization/databricks_integration/: __init__.py  credentials.py  manager.py
mcp_visualization/llm/: ollama_client.py  prompts.py
mcp_visualization/mcp_server/: handlers.py  server.py  tools.py
mcp_visualization/templates/: enhanced_dashboard.html  interactive_dashboard.html  robust_dashboard.html
mcp_visualization/utils/: logger.py  validators.py
mcp_visualization/visualization/: chart_generator.py  chart_types.py  insights.py
scripts/: create_sample_db.py  install_ollama.sh  setup_environment.py
tests/: test_database.py  test_llm.py  test_visualization.py
