[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-visualization-duckdb"
version = "0.1.4"
description = "Transform natural language into beautiful data visualizations using Claude Desktop with DuckDB and Databricks support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MCP Visualization Contributors"}
]
keywords = ["mcp", "claude", "desktop", "visualization", "duckdb", "databricks", "charts", "data-analysis", "sql", "warehouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "databricks-sql-connector>=3.0.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
advanced = [
    "kaleido>=0.2.1",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/mcp-visualization-duckdb"
Documentation = "https://github.com/your-username/mcp-visualization-duckdb#readme"
Repository = "https://github.com/your-username/mcp-visualization-duckdb.git"
Issues = "https://github.com/your-username/mcp-visualization-duckdb/issues"

[project.scripts]
mcp-viz = "mcp_visualization.cli:main"
mcp-viz-setup = "mcp_visualization.install_helper:main"
build-samples = "build_sample_db:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_visualization*"]

[tool.setuptools.package-data]
"mcp_visualization.data" = ["*.csv", "*.duckdb", "*.db"]
"mcp_visualization.config" = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"